--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Alexander Otto: Project 1</title>
+  <title>My Resume</title>
 </head>
 <body>
-
+  <h1>My Resume</h1>
+    <li><a href="index.html">My Resume</a></li>
+    <li><a href="Hobbies.html">Hobbies</a></li>
+    <li><a href="Football.html">Football</a></li>
+</body>
+</html>
 
   
