--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <title>My Resume</title>
 </head>
 <body>
+  <ul>
+    <li><a href="index.html">My Resume</a></li>
+    <li><a href="Hobbies.html">Hobbies</a></li>
+    <li><a href="Football.html">Football</a></li>
+  </ul>
   <h1>My Resume</h1>
-    <ul>
-      <li><a href="index.html">My Resume</a></li>
-      <li><a href="Hobbies.html">Hobbies</a></li>
-      <li><a href="Football.html">Football</a></li>
-    </ul>
+  <section>
+    <h2>Summary</h2>
+    <p>An aspiring future web developer who looks foward to creating more user fiendly websites with great features to spark up the technology industry</p>
+  </section>
+  <section>
+    <h2>Education</h2>
 </body>
 </html>
 
