update on Education

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
   <h1>My Resume</h1>
   <section>
     <h2>Summary</h2>
-    <p>An aspiring future web developer who looks foward to creating more user fiendly websites with great features to spark up the technology industry</p>
+    <p>An aspiring future web developer who looks foward to creating more user fiendly websites with great features to spark up the technology industry.</p>
   </section>
   <section>
     <h2>Education</h2>
+    <h3>Bachelor Of Science Banking and Finance</h3>
+    <p>University of Buea-Cameroon</p>
+    <p><i>2017-2019</i></p>
+    <h3>Higher National Diploma Banking and Finance</h3>
+    <p>Catholic University Institute of Buea</p>
+    <p><i>2015-2017</i></p>
+  </section>
 </body>
 </html>
 
