update work experience

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <p>Catholic University Institute of Buea</p>
     <p><i>2015-2017</i></p>
   </section>
+  <section>
+    <h2>Work Experience</h2>
+    <h3>Company A</h3>
+    <p><i>2017-Present</i></p>
+  </section>
 </body>
 </html>
 
