--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
     <h2>Work Experience</h2>
     <h3>Company A</h3>
     <p><i>2017-Present</i></p>
+    <ul>
+      <li>Collaborated with cross-functional teams to deliver high-quality solutions</li>
+    </ul>
   </section>
+  <section>
+  <h2>Skills</h2>
+    <ul>
+      <li>HTML5, CSS3, JavaScript</li>
+      <li>React, Node.js</li>
+      <li>Git, Github</li>
+      <li>Agile Development</li>
+    </ul>
+  </section>
+  <img src="image.png" alt="profile_photo">
 </body>
 </html>
 
