--- a/Football.html
+++ b/Football.html
@@ -11,5 +11,9 @@
       <li><a href="Hobbies">Hobbies</a></li>
       <li><a href="Football">Football</a></li>
     </ul>
+  <section>
+  <h2>School Team</h2>
+    <p>As a young lad, i've always been passionate about playing football</p>
+  </section>
 </body>
 </html>
