--- a/Football.html
+++ b/Football.html
@@ -13,7 +13,7 @@
     </ul>
   <section>
   <h2>School Team</h2>
-    <p>As a young lad, i've always been passionate about playing football</p>
+    <li>As a young lad, i've always been passionate about playing football</li>
   </section>
 </body>
 </html>
