--- a/Hobbies.html
+++ b/Hobbies.html
@@ -12,9 +12,12 @@
       <li><a href="Football">Football</a></li>
     </ul>
   <section>
-    <h2>Swimming</h2>
-      <p>Swimming is a hobby I love so much because it involves all parts of the body. My mortivation forchoosing swimming as a hobby is because as a child, I grew up in an Island where being friendly with water was the other of the day.</p>
-    <h2>Playing Soccer</h2>
-      <p>Soccer happend to be one of the most viewd sports in the world, with my favorite player being Cristiano Ronaldo</p>
+  <h2>Swimming</h2>
+    <li>Swimming is a hobby I love so much because it involves all parts of the body. My mortivation forchoosing swimming as a hobby is because as a child, I grew up in an Island where being friendly with water was the other of the day.</li>
+  </section>
+  <section>
+  <h2>Playing Soccer</h2>
+    <li>Soccer happend to be one of the most viewd sports in the world, with my favorite player being Cristiano Ronaldo</li>
+  </section>
 </body>
 </html>
